# chronos-gate

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  README.md  codecov.yml  coverage.xml  intents.example.yaml  intents.yaml  package.json  pyproject.toml  release-please-config.json  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: ci.yml  codecov.yml  codeql.yml  release.yml  semgrep.yml  sonarcloud.yml
.opencode/plugins/: chronos-gate.js
docs/: agent-setup-protocol.md
scripts/: check_evaluator.sh  chronos-evaluator-hook.sh
src/chronos_gate/: __main__.py  app.py  cli.py  config.py  errors.py  middleware.py  server.py
src/chronos_gate/approval/: __init__.py  models.py  notifier.py  registry.py  sanitize.py
src/chronos_gate/audit/: logger.py
src/chronos_gate/auth/: __init__.py  api_key.py  handshake.py  session.py
src/chronos_gate/filters/: factory.py  none_filter.py  structural_allowlist.py
src/chronos_gate/policy/: _composite_llm.py  composite.py  engine.py  llm_evaluator.py  loader.py  memory_client.py  models.py  models_evaluator.py
tests/integration/: test_evaluator_cli_subprocess.py  test_phase2_timeout_integration.py
tests/unit/: chronos_gate_plugin.test.js  conftest.py  test_approval_models.py  test_approval_registry.py  test_approval_sanitize.py  test_build_app_hidden_tools.py  test_chronos_gate.py  test_chronos_gate_cli.py  test_chronos_gate_composite.py  test_chronos_gate_evaluator_models.py  test_chronos_gate_evaluator_settings.py  test_chronos_gate_llm_evaluator.py  test_chronos_gate_memory_client.py  test_notifier_sanitization.py  test_param_constraint.py  test_session_eviction_hook.py  test_session_management.py  test_settings_ingestion_mode.py  test_tool_registry_hidden.py  test_upstream_timeout.py
(+4 files in other folders)
