[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chronos-gate"
version = "1.1.0"
description = "Universal security evaluator gateway for AI agent tool calls"
requires-python = ">=3.12"
dependencies = [
    "context-store-mcp @ git+https://github.com/yohi/chronos-graph.git@6bceb8c96e821c314f103e4041dbe1914501c346",
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "tenacity>=8.0.0",
    "tiktoken>=0.6.0",
    "pyyaml>=6.0",
    "litellm>=1.89.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "asgi-lifespan>=2.1.0",
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
chronos-gate = "chronos_gate.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/chronos_gate"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "S", "B"]
extend-select = ["T20"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]
"scripts/*.py" = ["T201"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
explicit_package_bases = true
strict = true
warn_unused_ignores = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "chronos_gate.server"
disallow_untyped_decorators = false

[tool.hatch.metadata]
allow-direct-references = true

[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "chronos_shared.*"
ignore_missing_imports = true
